Update sample to not use build.xml or ant

--- a/sample/etc/lsc.properties
+++ b/sample/etc/lsc.properties
@@ -58,7 +58,7 @@ dst.java.naming.ldap.version = 3
 src.database.driver = org.hsqldb.jdbcDriver
 
 # Connection URL. This must include the database name.
-src.database.url = jdbc:hsqldb:file:hsqldb/lsc
+src.database.url = jdbc:hsqldb:file:/tmp/lsc/hsqldb/lsc
 
 # User name to connect to the database with
 src.database.username = sa
