--- a/pom.xml
+++ b/pom.xml
@@ -190,7 +190,7 @@
 				</executions>
 			</plugin>
 
-			<!--<plugin>
+			<!-- <plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<executions>
 					<execution>
@@ -379,9 +379,9 @@
 			<version>1.0</version>
 		</dependency>
 		<dependency>
-			<groupId>xstream</groupId>
+			<groupId>com.thoughtworks.xstream</groupId>
 			<artifactId>xstream</artifactId>
-			<version>1.2.2</version>
+			<version>1.3.1</version>
 		</dependency>
 
 		<!-- Logging -->
