Remove comments from pom

--- a/pom.xml
+++ b/pom.xml
@@ -190,7 +190,7 @@
 				</executions>
 			</plugin>
 
-			<!-- <plugin>
+			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<executions>
 					<execution>
@@ -221,7 +221,7 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>-->
+			</plugin> 
 
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
