Sample from trunk. References #174

--- a/sample/etc/lsc.properties
+++ b/sample/etc/lsc.properties
@@ -58,7 +58,7 @@ dst.java.naming.ldap.version = 3
 src.database.driver = org.hsqldb.jdbcDriver
 
 # Connection URL. This must include the database name.
-src.database.url = jdbc:hsqldb:file:hsqldb/lsc
+src.database.url = jdbc:hsqldb:file:/tmp/lsc/hsqldb/lsc
 
 # User name to connect to the database with
 src.database.username = sa
@@ -79,12 +79,32 @@ lsc.tasks.MySyncTask.type = db2ldap
 
 # Java class name for the service to read objects from the source
 # Either "org.lsc.jndi.SimpleJndiSrcService" for ldap2ldap, or
-# "org.lsc.service.<objectName>JdbcService" for db2ldap
-lsc.tasks.MySyncTask.srcService = org.lsc.service.InetOrgPersonJDBCService
+# "org.lsc.service.SimpleJdbcSrcService" for db2ldap
+# See etc/lsc.properties-sample for full definitions
+lsc.tasks.MySyncTask.srcService = org.lsc.service.SimpleJdbcSrcService
+
+
+### SimpleJdbcSrcService parameters
+# The parameters in this section only apply to the SimpleJdbcSrcService
+# This section can safely be deleted if you are not using db2ldap synchronization.
+
+# Request name from a file in CONFIGURATION_DIR/sql-map-config.d/
+# to read a full list of pivot attributes for all objects to be synchronized
+lsc.tasks.MySyncTask.srcService.requestNameForList = getInetOrgPersonList
+
+# Request name from a file in CONFIGURATION_DIR/sql-map-config.d/
+# to read a single entry to be synchronized given a set of pivot attributes
+lsc.tasks.MySyncTask.srcService.requestNameForObject = getInetOrgPerson
+
+lsc.tasks.MySyncTask.srcService.requestNameForNextId = not used yet
+
+### END of SimpleJdbcSrcService parameters
+
 
 # Java class name for the service to read objects from the source
 # Usually "org.lsc.jndi.SimpleJndiDstService".
 lsc.tasks.MySyncTask.dstService = org.lsc.jndi.SimpleJndiDstService
+
 
 ### SimpleJndiDstService parameters
 # The parameters in this section only apply to the SimpleJndiDstService
@@ -103,11 +123,13 @@ lsc.tasks.MySyncTask.dstService.pivotAttrs = mail
 lsc.tasks.MySyncTask.dstService.filterId = (&(objectClass=inetOrgPerson)(mail={mail}))
 
 # Attributes to read from each entry used to read and write data
-#lsc.tasks.MySyncTask.dstService.attrs = description cn sn userPassword objectClass
+lsc.tasks.MySyncTask.dstService.attrs = description cn sn userPassword objectClass
+### END of SimpleJndiDstService parameters
+
 
 # Java class name for the LDAP objectClass to compare source and destination objects
 # This should be the LDAP objectClass of entries in the destination directory
-lsc.tasks.MySyncTask.bean = org.lsc.beans.inetOrgPersonBean
+lsc.tasks.MySyncTask.bean = org.lsc.beans.SimpleBean
 
 # Construct a DN for new entries in the destination directory
 # This is a JavaScript expression, and can access any utility functions and the srcBean.
