Various updates to get the sample working. Includes a lib dir in sample dir, a tests JAR, a simple LDIF file for the sample. Fixes #174.

--- a/sample/etc/lsc.properties
+++ b/sample/etc/lsc.properties
@@ -110,7 +110,7 @@ lsc.tasks.MySyncTask.dstService = org.lsc.jndi.SimpleJndiDstService
 # The parameters in this section only apply to the SimpleJndiDstService
 
 # Base DN for searches in the directory
-lsc.tasks.MySyncTask.dstService.baseDn = ou=People
+lsc.tasks.MySyncTask.dstService.baseDn = ou=Sample
 
 # Filter to list all entries to synchronize
 lsc.tasks.MySyncTask.dstService.filterAll = (objectClass=inetOrgPerson)
@@ -134,7 +134,7 @@ lsc.tasks.MySyncTask.bean = org.lsc.beans.SimpleBean
 # Construct a DN for new entries in the destination directory
 # This is a JavaScript expression, and can access any utility functions and the srcBean.
 # It should be relative to the LDAP context specified in dst.java.naming.provider.url
-lsc.tasks.MySyncTask.dn = "mail=" + srcBean.getAttributeValueById("mail") + ",ou=People"
+lsc.tasks.MySyncTask.dn = "mail=" + srcBean.getAttributeValueById("mail") + ",ou=Sample"
 
 lsc.syncoptions.MySyncTask = org.lsc.beans.syncoptions.PropertiesBasedSyncOptions
 lsc.syncoptions.MySyncTask.default.action = F
