--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,12 @@
 
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<show>public</show>
+					<links>
+						<link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
+					</links>
+				</configuration>
 				<executions>
 					<execution>
 						<phase>package</phase>
