Remove deprecated method of IBean : getAttributeValueById

--- a/src/test/resources/lsc.properties
+++ b/src/test/resources/lsc.properties
@@ -60,7 +60,7 @@ lsc.syncoptions.sampleTask.DelimitedAttribute.delimiter = $
 lsc.syncoptions.sampleTask.DelimitedAttribute.force_value = "a"$"b" 
 
 lsc.tasks.ldap2ldapTestTask.bean = org.lsc.beans.SimpleBean
-lsc.tasks.ldap2ldapTestTask.dn = "cn=" + srcBean.getAttributeValueById("cn") + ",ou=ldap2ldap2TestTaskDst,ou=Test Data"
+lsc.tasks.ldap2ldapTestTask.dn = "cn=" + srcBean.getAttributeFirstValueById("cn") + ",ou=ldap2ldap2TestTaskDst,ou=Test Data"
 #lsc.tasks.ldap2ldapTestTask.srcService = org.lsc.jndi.SimpleJndiSrcService
 # PoolableJndiSrcService provides the ability to lookup for updates
 lsc.tasks.ldap2ldapTestTask.srcService = org.lsc.jndi.PoolableJndiSrcService
@@ -90,14 +90,14 @@ lsc.syncoptions.ldap2ldapTestTask = org.lsc.beans.syncoptions.PropertiesBasedSyn
 lsc.syncoptions.ldap2ldapTestTask.default.delimiter = ,
 lsc.syncoptions.ldap2ldapTestTask.default.action = K
 lsc.syncoptions.ldap2ldapTestTask.description.action = M
-lsc.syncoptions.ldap2ldapTestTask.description.default_value = srcBean.getAttributeValueById("userPassword")
+lsc.syncoptions.ldap2ldapTestTask.description.default_value = srcBean.getAttributeFirstValueById("userPassword")
 lsc.syncoptions.ldap2ldapTestTask.objectclass.default_value = "person", "top"
 lsc.syncoptions.ldap2ldapTestTask.objectclass.action = M
 lsc.syncoptions.ldap2ldapTestTask.objectclass.create_value = "inetOrgPerson"
 lsc.syncoptions.ldap2ldapTestTask.mail.create_value = "ok@domain.net"
 lsc.syncoptions.ldap2ldapTestTask.initials.create_value = "cn=oops"
 lsc.syncoptions.ldap2ldapTestTask.userPassword.action = F
-lsc.syncoptions.ldap2ldapTestTask.userPassword.force_value = "secret" + srcBean.getAttributeValueById("cn")
+lsc.syncoptions.ldap2ldapTestTask.userPassword.force_value = "secret" + srcBean.getAttributeFirstValueById("cn")
 lsc.syncoptions.ldap2ldapTestTask.telephoneNumber.action = M
 lsc.syncoptions.ldap2ldapTestTask.telephoneNumber.create_value = "000000", "11111"
 lsc.syncoptions.ldap2ldapTestTask.telephoneNumber.default_value = "123456", "789987"
@@ -105,7 +105,7 @@ lsc.syncoptions.ldap2ldapTestTask.seeAlso.action = F
 
 lsc.tasks.db2ldapTestTask.async = false
 lsc.tasks.db2ldapTestTask.bean = org.lsc.beans.SimpleBean
-lsc.tasks.db2ldapTestTask.dn = "cn=" + srcBean.getAttributeValueById("givenName") + " " + + srcBean.getAttributeValueById("sn") + ",ou=db2ldap2TestTaskDst,ou=Test Data"
+lsc.tasks.db2ldapTestTask.dn = "cn=" + srcBean.getAttributeFirstValueById("givenName") + " " + + srcBean.getAttributeFirstValueById("sn") + ",ou=db2ldap2TestTaskDst,ou=Test Data"
 lsc.tasks.db2ldapTestTask.srcService = org.lsc.service.SimpleJdbcSrcService
 lsc.tasks.db2ldapTestTask.srcService.requestNameForList = getListTestDb2Ldap
 lsc.tasks.db2ldapTestTask.srcService.requestNameForObject = getObjectTestDb2Ldap
@@ -120,13 +120,13 @@ lsc.syncoptions.db2ldapTestTask = org.lsc.beans.syncoptions.PropertiesBasedSyncO
 lsc.syncoptions.db2ldapTestTask.default.delimiter = ,
 lsc.syncoptions.db2ldapTestTask.default.action = K
 lsc.syncoptions.db2ldapTestTask.description.action = M
-lsc.syncoptions.db2ldapTestTask.description.default_value = srcBean.getAttributeValueById("userPassword")
+lsc.syncoptions.db2ldapTestTask.description.default_value = srcBean.getAttributeFirstValueById("userPassword")
 lsc.syncoptions.db2ldapTestTask.objectclass.action = F
 lsc.syncoptions.db2ldapTestTask.objectclass.default_value = "person", "top", "organizationalPerson", "inetOrgPerson"
 lsc.syncoptions.db2ldapTestTask.userPassword.action = F
-lsc.syncoptions.db2ldapTestTask.userPassword.force_value = srcBean.getAttributeValueById("password")
+lsc.syncoptions.db2ldapTestTask.userPassword.force_value = srcBean.getAttributeFirstValueById("password")
 lsc.syncoptions.db2ldapTestTask.cn.action = F
-lsc.syncoptions.db2ldapTestTask.cn.force_value = srcBean.getAttributeValueById("givenName") + " " + + srcBean.getAttributeValueById("sn")
+lsc.syncoptions.db2ldapTestTask.cn.force_value = srcBean.getAttributeFirstValueById("givenName") + " " + + srcBean.getAttributeFirstValueById("sn")
 lsc.syncoptions.db2ldapTestTask.telephoneNumber.action = M
 lsc.syncoptions.db2ldapTestTask.telephoneNumber.create_value = "000000", "11111"
 lsc.syncoptions.db2ldapTestTask.telephoneNumber.default_value = "123456", "789987"
