Fixing executable service and add tests

--- a/src/test/resources/lsc.properties
+++ b/src/test/resources/lsc.properties
@@ -41,7 +41,7 @@ src.database.password =
 # All other values are prefixed by lsc.syncoptions
 ####
 
-lsc.tasks = ldap2ldapTestTask, db2ldapTestTask
+lsc.tasks = ldap2ldapTestTask, db2ldapTestTask, ldap2executableTestTask
 
 lsc.tasks.sampleTask.srcService = org.lsc.service.InetOrgPersonJdbcService
 lsc.tasks.sampleTask.dstService = org.lsc.jndi.InetOrgPersonJndiService
@@ -130,4 +130,62 @@ lsc.syncoptions.db2ldapTestTask.cn.force_value = srcBean.getAttributeFirstValueB
 lsc.syncoptions.db2ldapTestTask.telephoneNumber.action = M
 lsc.syncoptions.db2ldapTestTask.telephoneNumber.create_value = "000000", "11111"
 lsc.syncoptions.db2ldapTestTask.telephoneNumber.default_value = "123456", "789987"
+
+
+lsc.tasks.ldap2executableTestTask.bean = org.lsc.beans.SimpleBean
+lsc.tasks.ldap2executableTestTask.dn = "cn=" + srcBean.getAttributeValueById("cn") + ",ou=ldap2executable2TestTaskDst,ou=Test Data"
+#lsc.tasks.ldap2executableTestTask.srcService = org.lsc.jndi.SimpleJndiSrcService
+# PoolableJndiSrcService provides the ability to lookup for updates
+lsc.tasks.ldap2executableTestTask.srcService = org.lsc.jndi.PoolableJndiSrcService
+lsc.tasks.ldap2executableTestTask.srcService.baseDn = ou=ldap2executable2TestTaskSrc,ou=Test Data
+lsc.tasks.ldap2executableTestTask.srcService.pivotAttrs = sn
+lsc.tasks.ldap2executableTestTask.srcService.filterAll = (&(sn=*))
+lsc.tasks.ldap2executableTestTask.srcService.filterId = (sn={sn})
+
+# The following three lines are valuable if lsc.tasks.ldap2executableTestTask.srcService = org.lsc.jndi.PoolableJndiSrcService
+# filterAsync must contains a logical AND between the filterAll criterias and the timestamping criteria
+lsc.tasks.ldap2executableTestTask.srcService.filterAsync = (&(sn=*)(modifytimestamp>={0}))
+# dateFormat is used by SimpleDateFormat to convert the Date object into a valuable string that will be injected
+# in filterAsync replacing {0}
+lsc.tasks.ldap2executableTestTask.srcService.dateFormat = yyyyMMddHHmmss'Z'
+# interval specifies the number of seconds that the sleeping thread will be waked up to launch a partial task according to filterAsync  
+lsc.tasks.ldap2executableTestTask.srcService.interval = 5 
+
+lsc.tasks.ldap2executableTestTask.srcService.attrs = description cn sn userPassword telephoneNumber seeAlso
+lsc.tasks.ldap2executableTestTask.dstService = org.lsc.connectors.executable.ExecutableLdifService
+lsc.tasks.ldap2executableTestTask.dstService.baseDn = ou=ldap2executable2TestTaskDst,ou=Test Data
+lsc.tasks.ldap2executableTestTask.dstService.pivotAttrs = sn
+lsc.tasks.ldap2executableTestTask.dstService.filterAll = (sn=*)
+lsc.tasks.ldap2executableTestTask.dstService.filterId = (sn={sn})
+lsc.tasks.ldap2executableTestTask.dstService.attrs = description cn objectClass userPassword sn telephoneNumber seeAlso mail
+
+lsc.tasks.ldap2executableTestTask.dstService.vars.LDAP_URL = ldap://localhost:33389/
+lsc.tasks.ldap2executableTestTask.dstService.vars.LDAP_SCOPE = one
+lsc.tasks.ldap2executableTestTask.dstService.vars.LDAP_BASE = ou=ldap2executable2TestTaskDst,ou=Test Data,dc=lsc-project,dc=org
+lsc.tasks.ldap2executableTestTask.dstService.vars.LDAP_BIND_DN = cn=Directory Manager
+lsc.tasks.ldap2executableTestTask.dstService.vars.LDAP_BIND_PW = secret
+
+lsc.tasks.ldap2executableTestTask.dstService.listScript = ../../src/test/resources/org/lsc/connectors/executable/list.sh
+lsc.tasks.ldap2executableTestTask.dstService.getScript = ../../src/test/resources/org/lsc/connectors/executable/get.sh
+lsc.tasks.ldap2executableTestTask.dstService.addScript = ../../src/test/resources/org/lsc/connectors/executable/add.sh
+lsc.tasks.ldap2executableTestTask.dstService.updateScript = ../../src/test/resources/org/lsc/connectors/executable/update.sh
+lsc.tasks.ldap2executableTestTask.dstService.renameScript = ../../src/test/resources/org/lsc/connectors/executable/rename.sh
+lsc.tasks.ldap2executableTestTask.dstService.deleteScript = ../../src/test/resources/org/lsc/connectors/executable/delete.sh
+
+lsc.syncoptions.ldap2executableTestTask = org.lsc.beans.syncoptions.PropertiesBasedSyncOptions
+lsc.syncoptions.ldap2executableTestTask.default.delimiter = ,
+lsc.syncoptions.ldap2executableTestTask.default.action = K
+lsc.syncoptions.ldap2executableTestTask.description.action = M
+lsc.syncoptions.ldap2executableTestTask.description.default_value = srcBean.getAttributeValueById("userPassword")
+lsc.syncoptions.ldap2executableTestTask.objectclass.default_value = "person", "top"
+lsc.syncoptions.ldap2executableTestTask.objectclass.action = M
+lsc.syncoptions.ldap2executableTestTask.objectclass.create_value = "inetOrgPerson"
+lsc.syncoptions.ldap2executableTestTask.mail.create_value = "ok@domain.net"
+lsc.syncoptions.ldap2executableTestTask.initials.create_value = "cn=oops"
+lsc.syncoptions.ldap2executableTestTask.userPassword.action = F
+lsc.syncoptions.ldap2executableTestTask.userPassword.force_value = "secret" + srcBean.getAttributeValueById("cn")
+lsc.syncoptions.ldap2executableTestTask.telephoneNumber.action = M
+lsc.syncoptions.ldap2executableTestTask.telephoneNumber.create_value = "000000", "11111"
+lsc.syncoptions.ldap2executableTestTask.telephoneNumber.default_value = "123456", "789987"
+lsc.syncoptions.ldap2executableTestTask.seeAlso.action = F
 
