Poolable to pullable

--- a/src/test/resources/lsc.properties
+++ b/src/test/resources/lsc.properties
@@ -62,14 +62,14 @@ lsc.syncoptions.sampleTask.DelimitedAttribute.force_value = "a"$"b"
 lsc.tasks.ldap2ldapTestTask.bean = org.lsc.beans.SimpleBean
 lsc.tasks.ldap2ldapTestTask.dn = "cn=" + srcBean.getAttributeFirstValueById("cn") + ",ou=ldap2ldap2TestTaskDst,ou=Test Data"
 #lsc.tasks.ldap2ldapTestTask.srcService = org.lsc.jndi.SimpleJndiSrcService
-# PoolableJndiSrcService provides the ability to lookup for updates
-lsc.tasks.ldap2ldapTestTask.srcService = org.lsc.jndi.PoolableJndiSrcService
+# PullableJndiSrcService provides the ability to lookup for updates
+lsc.tasks.ldap2ldapTestTask.srcService = org.lsc.jndi.PullableJndiSrcService
 lsc.tasks.ldap2ldapTestTask.srcService.baseDn = ou=ldap2ldap2TestTaskSrc,ou=Test Data
 lsc.tasks.ldap2ldapTestTask.srcService.pivotAttrs = cn sn
 lsc.tasks.ldap2ldapTestTask.srcService.filterAll = (&(sn=*))
 lsc.tasks.ldap2ldapTestTask.srcService.filterId = (sn={sn})
 
-# The following three lines are valuable if lsc.tasks.ldap2ldapTestTask.srcService = org.lsc.jndi.PoolableJndiSrcService
+# The following three lines are valuable if lsc.tasks.ldap2ldapTestTask.srcService = org.lsc.jndi.PullableJndiSrcService
 # filterAsync must contains a logical AND between the filterAll criterias and the timestamping criteria
 lsc.tasks.ldap2ldapTestTask.srcService.filterAsync = (&(sn=*)(modifytimestamp>={0}))
 # dateFormat is used by SimpleDateFormat to convert the Date object into a valuable string that will be injected
@@ -135,14 +135,14 @@ lsc.syncoptions.db2ldapTestTask.telephoneNumber.default_value = "123456", "78998
 lsc.tasks.ldap2executableTestTask.bean = org.lsc.beans.SimpleBean
 lsc.tasks.ldap2executableTestTask.dn = "cn=" + srcBean.getAttributeValueById("cn") + ",ou=ldap2executable2TestTaskDst,ou=Test Data"
 #lsc.tasks.ldap2executableTestTask.srcService = org.lsc.jndi.SimpleJndiSrcService
-# PoolableJndiSrcService provides the ability to lookup for updates
-lsc.tasks.ldap2executableTestTask.srcService = org.lsc.jndi.PoolableJndiSrcService
+# PullableJndiSrcService provides the ability to lookup for updates
+lsc.tasks.ldap2executableTestTask.srcService = org.lsc.jndi.PullableJndiSrcService
 lsc.tasks.ldap2executableTestTask.srcService.baseDn = ou=ldap2executable2TestTaskSrc,ou=Test Data
 lsc.tasks.ldap2executableTestTask.srcService.pivotAttrs = sn
 lsc.tasks.ldap2executableTestTask.srcService.filterAll = (&(sn=*))
 lsc.tasks.ldap2executableTestTask.srcService.filterId = (sn={sn})
 
-# The following three lines are valuable if lsc.tasks.ldap2executableTestTask.srcService = org.lsc.jndi.PoolableJndiSrcService
+# The following three lines are valuable if lsc.tasks.ldap2executableTestTask.srcService = org.lsc.jndi.PullableJndiSrcService
 # filterAsync must contains a logical AND between the filterAll criterias and the timestamping criteria
 lsc.tasks.ldap2executableTestTask.srcService.filterAsync = (&(sn=*)(modifytimestamp>={0}))
 # dateFormat is used by SimpleDateFormat to convert the Date object into a valuable string that will be injected
