--- a/src/test/resources/lsc.properties
+++ b/src/test/resources/lsc.properties
@@ -165,12 +165,12 @@ lsc.tasks.ldap2executableTestTask.dstService.vars.LDAP_BASE = ou=ldap2executable
 lsc.tasks.ldap2executableTestTask.dstService.vars.LDAP_BIND_DN = cn=Directory Manager
 lsc.tasks.ldap2executableTestTask.dstService.vars.LDAP_BIND_PW = secret
 
-lsc.tasks.ldap2executableTestTask.dstService.listScript = ../../src/test/resources/org/lsc/connectors/executable/list.sh
-lsc.tasks.ldap2executableTestTask.dstService.getScript = ../../src/test/resources/org/lsc/connectors/executable/get.sh
-lsc.tasks.ldap2executableTestTask.dstService.addScript = ../../src/test/resources/org/lsc/connectors/executable/add.sh
-lsc.tasks.ldap2executableTestTask.dstService.updateScript = ../../src/test/resources/org/lsc/connectors/executable/update.sh
-lsc.tasks.ldap2executableTestTask.dstService.renameScript = ../../src/test/resources/org/lsc/connectors/executable/rename.sh
-lsc.tasks.ldap2executableTestTask.dstService.deleteScript = ../../src/test/resources/org/lsc/connectors/executable/delete.sh
+lsc.tasks.ldap2executableTestTask.dstService.listScript = src/test/resources/org/lsc/connectors/executable/list.sh
+lsc.tasks.ldap2executableTestTask.dstService.getScript = src/test/resources/org/lsc/connectors/executable/get.sh
+lsc.tasks.ldap2executableTestTask.dstService.addScript = src/test/resources/org/lsc/connectors/executable/add.sh
+lsc.tasks.ldap2executableTestTask.dstService.updateScript = src/test/resources/org/lsc/connectors/executable/update.sh
+lsc.tasks.ldap2executableTestTask.dstService.renameScript = src/test/resources/org/lsc/connectors/executable/rename.sh
+lsc.tasks.ldap2executableTestTask.dstService.deleteScript = src/test/resources/org/lsc/connectors/executable/delete.sh
 
 lsc.syncoptions.ldap2executableTestTask = org.lsc.beans.syncoptions.PropertiesBasedSyncOptions
 lsc.syncoptions.ldap2executableTestTask.default.delimiter = ,
