--- a/pom.xml
+++ b/pom.xml
@@ -148,8 +148,8 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+					<source>1.6</source>
+					<target>1.6</target>
 				</configuration>
 				<executions>
 					<execution>
@@ -459,6 +459,16 @@
 			<artifactId>bcprov-${jdk-version}</artifactId>
 			<version>140</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.management</groupId>
+			<artifactId>jmxri</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+                <dependency>
+                        <groupId>commons-cli</groupId>
+                        <artifactId>commons-cli</artifactId>
+                        <version>1.0</version>
+                </dependency>
 	</dependencies>
 
 	<reporting>
