--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,10 @@
 
 			<plugin>                                                                                                            
 				<groupId>org.apache.maven.plugins</groupId>                                                                 
-				<artifactId>maven-surefire-plugin</artifactId>                                                              
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>-Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=1099 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false</argLine>
+				</configuration>
 			</plugin>  
 
 			<plugin>
