--- a/src/test/resources/lsc.properties
+++ b/src/test/resources/lsc.properties
@@ -133,7 +133,7 @@ lsc.syncoptions.db2ldapTestTask.telephoneNumber.default_value = "123456", "78998
 
 
 lsc.tasks.ldap2executableTestTask.bean = org.lsc.beans.SimpleBean
-lsc.tasks.ldap2executableTestTask.dn = "cn=" + srcBean.getAttributeValueById("cn") + ",ou=ldap2executable2TestTaskDst,ou=Test Data"
+lsc.tasks.ldap2executableTestTask.dn = "cn=" + srcBean.getAttributeValueById("cn") + ",ou=ldap2executable2TestTaskDst,ou=Test Data,dc=lsc-project,dc=org"
 #lsc.tasks.ldap2executableTestTask.srcService = org.lsc.jndi.SimpleJndiSrcService
 # PullableJndiSrcService provides the ability to lookup for updates
 lsc.tasks.ldap2executableTestTask.srcService = org.lsc.jndi.PullableJndiSrcService
