Use UnboundID to parse URL from lsc.properties. Fixes #209. Fixes #252.

--- a/src/test/resources/lsc.properties
+++ b/src/test/resources/lsc.properties
@@ -18,6 +18,11 @@ dst.java.naming.ldap.version=3
 dst.java.naming.ldap.derefAliases=never
 dst.java.naming.referral=ignore
 
+dst.java.naming.provider.url.spaces.new = ldap://localhost:33389/o=bla bla,dc=lsc-project,dc=org
+dst.java.naming.provider.url.spaces.old = ldap://localhost:33389/o=bla\\20bla,dc=lsc-project,dc=org
+dst.java.naming.provider.url.accents.new = ldap://localhost:33389/o=Père,dc=lsc-project,dc=org
+dst.java.naming.provider.url.accents.old = ldap://localhost:33389/o=P\\c3\\a8re,dc=lsc-project,dc=org
+
 ###################
 # Source database #
 ###################
