Parse config for several LDAP URLs to allow for redundancy, while fixing #209. Adds a test for this scenario. Fixes #209.

--- a/src/test/resources/lsc.properties
+++ b/src/test/resources/lsc.properties
@@ -22,6 +22,8 @@ dst.java.naming.provider.url.spaces.new = ldap://localhost:33389/o=bla bla,dc=ls
 dst.java.naming.provider.url.spaces.old = ldap://localhost:33389/o=bla\\20bla,dc=lsc-project,dc=org
 dst.java.naming.provider.url.accents.new = ldap://localhost:33389/o=Père,dc=lsc-project,dc=org
 dst.java.naming.provider.url.accents.old = ldap://localhost:33389/o=P\\c3\\a8re,dc=lsc-project,dc=org
+dst.java.naming.provider.url.multiple.simple = ldap://host.that.doesnt.exist/dc=lsc-project,dc=org ldap://localhost:33389/dc=lsc-project,dc=org
+dst.java.naming.provider.url.multiple.spaces = ldap://host.that.doesnt.exist/o=bla bla,dc=lsc-project,dc=org ldap://localhost:33389/o=bla bla,dc=lsc-project,dc=org
 
 ###################
 # Source database #
