Update Maven repo URLs at Codehaus (it seems they changed and maven doesn't like the HTTP 301 responses...)

--- a/pom.xml
+++ b/pom.xml
@@ -321,7 +321,7 @@
 		</repository>
 		<repository>
 			<id>Codehaus Snapshot</id>
-			<url>http://snapshots.repository.codehaus.org/</url>
+			<url>https://nexus.codehaus.org/content/repositories/codehaus-snapshots/</url>
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
@@ -342,7 +342,7 @@
 	<pluginRepositories>
 		<pluginRepository>
 			<id>Codehaus Snapshot</id>
-			<url>http://snapshots.repository.codehaus.org/</url>
+			<url>https://nexus.codehaus.org/content/repositories/codehaus-snapshots/</url>
 			<snapshots>
 				<enabled>true</enabled>
 				<updatePolicy>always</updatePolicy>
@@ -353,7 +353,7 @@
 		</pluginRepository>
 		<pluginRepository>
 			<id>Codehaus</id>
-			<url>http://repository.codehaus.org/</url>
+			<url>https://nexus.codehaus.org/content/repositories/releases/</url>
 			<snapshots>
 				<enabled>true</enabled>
 				<updatePolicy>always</updatePolicy>
