Fixing sample configuration

--- a/sample/etc/lsc.properties
+++ b/sample/etc/lsc.properties
@@ -120,7 +120,7 @@ lsc.tasks.MySyncTask.dstService.pivotAttrs = mail
 lsc.tasks.MySyncTask.dstService.filterId = (&(objectClass=inetOrgPerson)(mail={mail}))
 
 # Attributes to read from each entry used to read and write data
-lsc.tasks.MySyncTask.dstService.attrs = description cn sn userPassword objectClass
+lsc.tasks.MySyncTask.dstService.attrs = description cn sn userPassword objectClass mail
 ### END of SimpleJndiDstService parameters
 
 
@@ -131,16 +131,16 @@ lsc.tasks.MySyncTask.bean = org.lsc.beans.SimpleBean
 # Construct a DN for new entries in the destination directory
 # This is a JavaScript expression, and can access any utility functions and the srcBean.
 # It should be relative to the LDAP context specified in dst.java.naming.provider.url
-lsc.tasks.MySyncTask.dn = "mail=" + srcBean.getAttributeValueById("mail") + ",ou=Sample"
+lsc.tasks.MySyncTask.dn = "mail=" + srcBean.getAttributeFirstValueById("mail") + ",ou=Sample,dc=lsc-project,dc=org"
 
 lsc.syncoptions.MySyncTask = org.lsc.beans.syncoptions.PropertiesBasedSyncOptions
 lsc.syncoptions.MySyncTask.default.action = F
 
-lsc.syncoptions.MySyncTask.objectClass.action = K
+lsc.syncoptions.MySyncTask.objectClass.action = F
 lsc.syncoptions.MySyncTask.objectClass.delimiter = ,
-lsc.syncoptions.MySyncTask.objectClass.create_value = "inetOrgPerson","organizationalPerson","person","top"
+lsc.syncoptions.MySyncTask.objectClass.force_value = "inetOrgPerson","organizationalPerson","person","top"
 
 lsc.syncoptions.MySyncTask.userPassword.action = K
-lsc.syncoptions.MySyncTask.userPassword.default_value = "changethis"
+lsc.syncoptions.MySyncTask.userPassword.create_value = "changethis"
 
 dn.real_root = dc=lsc-project,dc=org
